--- a/src/test/test.conf
+++ b/src/test/test.conf
@@ -1,7 +1,13 @@
-same => n(OneTest),Set(IVR_CONF_GLOBAL_test=1)
-same => n,Set(IVR_CONF_GLOBAL_test=2)
-same => n,AGI(agi://fagi-server/TrimWavSilence?prefix=${Record})
+[globals]
 
-; if variable WavTestStatus is set to 1, then play the file, else go to OneTest
-same => n,GotoIf($["${WavTestStatus}" = "1"]?OneTest)
-same => n,Playback(${Record})
+[default]
+exten => s,1,Answer()
+same => n,Wait(1)
+same => n,Playback(hello-world)
+same => n,Hangup()
+
+[test]
+exten => 123,1,Answer()
+same => n,Dial(SIP/1234)
+same => n,Playback(hello-world
+same => n,Hangup()
