update package version to 0.0.7; add document symbol provider for Asterisk blocks and enhance diagnostics for duplicate function names and bracket matching

--- a/src/test/test.conf
+++ b/src/test/test.conf
@@ -8,6 +8,9 @@ same => n,Hangup()
 
 [test]
 exten => 123,1,Answer()
-same => n,Dial(SIP/1234)
-same => n,Playback(hello-world
-same => n,Hangup()
+same => n(First),AGI(agi://fagi-s1/ProbeAudio?path=${IVR_DIR}/M0000)
+same => n(Firs1t),AGI(agi://fagi-s1/ProbeAudio?path=${IVR_DIR}/M0000)
+
+[test2]
+exten => 123,1,Answer()
+same => n(First),AGI(agi://fagi-s1/ProbeAudio?path=${IVR_DIR}/M0000)
