add activation events for Asterisk language support in package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "categories": [
     "Programming Languages"
   ],
+  "activationEvents": [
+    "onLanguage:asterisk"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "languages": [
